# flat

./: BUILD.bazel  README.md  WORKSPACE  cgo.Dockerfile  deps.bzl  go.mod  synth.go  tiny.Dockerfile  voice.go
.github/workflows/: test.yml
cmd/cmuuskal/: main.go
cmd/hello/: BUILD.bazel  main.go
cmd/ttw/: main.go
cmd/wavout/: BUILD.bazel  main.go
lib/: BUILD.bazel
libttspico/: Dockerfile  README.md  example.c  lib.Makefile  pico.list  raspbian.list  wasi.Makefile
pico/: BUILD.pico  deb.list
